   at the current location when no parameters are provided.
 * Added the 'a' option to app_dial to answer the calling channel before any
   announcements or macros are executed.
 * Modified app_dial to set answertime when the called channel answers even if
   the called channel hangs up during playback of an announcement.
 * Added c() option to app_chanspy. This option allows custom DTMF to be set
   to cycle through the next available channel.  By default this is still '*'.
 * Added x() option to app_chanspy.  This option allows DTMF to be set to
   exit the application.
 * The Voicemail application has been improved to automatically ignore messages
   that only contain silence.
 * If you set maxmsg to 0 in voicemail.conf, Voicemail will consider the
   associated mailbox(es) to be greetings-only.
 * The ChanSpy application now has the 'S' option, which makes the application
   automatically exit once it hits a point where no more channels are available
   to spy on.
 * The ChanSpy application also now has the 'E' option, which spies on a single
   channel and exits when that channel hangs up.
 * The MeetMe application now turns on the DENOISE() function by default, for
   each participant.  In our tests, this has significantly decreased background
   noise (especially noisy data centers).
 * Voicemail now permits storage of secrets in a separate file, located in the
   spool directory of each individual user.  The control for this is located in
   the "passwordlocation" option in voicemail.conf.  Please see the sample
   configuration for more information.
 * The ChanIsAvail application now exposes the returned cause code using a separate
   variable, AVAILCAUSECODE, instead of overwriting the device state in AVAILSTATUS.
 * Added 'd' option to app_followme.  This option disables the "Please hold"
   announcement.
 * Added 'y' option to app_record. This option enables a mode where any DTMF digit
   received will terminate recording.